--- a/users/templates/users/postlist.html
+++ b/users/templates/users/postlist.html
@@ -32,21 +32,35 @@
                     <div class="row alime-portfolio">
                         {% for post in posts %}
                             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="100ms" style="display: flex; flex-direction: column-reverse;">
-                                <div class="card">
+                                <div class="card" style="border:none">
                                     <div class="single-portfolio-content">
                                         {% if "video" in post.mediatype %}
                                             <div id="video-{{post.id}}" style="display: block !important;">
-                                                <video class="col-12" controls >
+                                                <video class="col-12" controls preload="metadata" style="padding:0;">
                                                     <source src="{{post.mediafile.url}}" alt="video">
                                                 </video>
                                             </div>
                                             <div class="hover-content">
-                                                <a href="#video-{{post.id}}" class="video-play-btn">+</a>
+                                                <a href="{% url 'posts:show' post.id %}" class="whyrano-video" style="left:30%;">+</a>
+                                                <a href="{% url 'posts:post_like' post.id %}" class="like_toggle" data-post-id={{post.id}} style="color:white; left:70%; font-size: 25px;">
+                                                    {% if user in post.like_user_set.all %}
+                                                        <i class="fas fa-heart"></i>
+                                                    {% else %}
+                                                        <i class="far fa-heart"></i>
+                                                    {% endif %}
+                                                </a>
                                             </div>  
                                         {% else %}
                                             <img src ="{{post.mediafile.url}}" alt="">
                                             <div class="hover-content">
-                                                <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
+                                                <a href="{% url 'posts:show' post.id %}" class="whyrano-video" style="left:30%;">+</a>
+                                                <a href="{% url 'posts:post_like' post.id %}" class="like_toggle" data-post-id={{post.id}} style="color:white; left:70%; font-size: 25px;">
+                                                    {% if user in post.like_user_set.all %}
+                                                        <i class="fas fa-heart"></i>
+                                                    {% else %}
+                                                        <i class="far fa-heart"></i>
+                                                    {% endif %}
+                                                </a>
                                             </div>
                                         {% endif %}
 
@@ -56,17 +70,6 @@
                                             <span id="count-{{post.id}}">좋아요 {{ post.like_count }}개</span>
                                         {% endif %}
                                     </div>
-                                        <a href="{% url 'posts:post_like' post.id %}">
-                                            {% if user in post.like_user_set.all %}
-                                                <a href="#" class="like_toggle" data-post-id={{post.id}} style="color:#fd5f60;">
-                                                    <i class="fas fa-heart"></i>
-                                                </a>
-                                            {% else %}
-                                                <a href="#" class="like_toggle" data-post-id={{post.id}} style="color:#fd5f60;">
-                                                    <i class="far fa-heart"></i>
-                                                </a>
-                                            {% endif %}
-                                        </a>
                                 </div>
                             </div>
                         {% endfor %}
