--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -141,7 +141,9 @@
 
     <script src="{% static 'js/triggerclick.js' %}"></script>
 
-    <script src="{% static 'js/filesizelimit.js' %}"></script>    
+    <script src="{% static 'js/filecheck.js' %}"></script>    
+
+    <script src="{% static 'js/filename.js' %}"></script>
     
 
 
