--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -66,8 +66,8 @@
                         </div>
                         <div class="col-12">
                             <label for="uploadFile" class="upload-file" >
-                                <div class="btn btn-outline">파일 선택<input type="file" name="mediafile" onchange="limitSize(this)" accept="post.mediafile"></div>
-                                <p>{{post.mediafile}}</p><!-- 업로드파일명 -->
+                                <div class="btn btn-outline">파일 선택<input type="file" name="mediafile" onchange="fileCheck(this)" accept="post.mediafile"></div>
+                                <p id="onlyFileName">{{ post.mediafile }}</p><!-- 업로드파일명 -->
                             </label>
                         </div>
                         <div class="col-12">  
@@ -86,12 +86,17 @@
                         </div>
                     </form>
                 </div>
-
             </div>
         </div>
     </div>
 </div>
 <!-- Comment Area End -->
-
+<!-- <script type="text/javascript">
+    var mediafile = "{{ post.mediafile }}";
+    (function deleteParentdir(){
+        var mediaArray = mediafile.split('/');
+        document.getElementById('onlyFileName').innerHTML = mediaArray[1];
+    })()
+</script> -->
 {% endblock %}
    
