--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -22,12 +22,12 @@
                 <!-- Leave A Reply -->
                 <div class="alime-contact-form mt-20">
                     <h4 class="mb-30">사진/영상 업로드</h4>
-
+                {% if title %}        
                     <!-- Form -->
                     <form action="{% url 'posts:create' %}" method="POST"  enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="container">
-                            <div >
+                            <div>
                                 <label>카테고리</label>
                                 <select name="category" id="category">
                                     <option value="pub">주점</option>
@@ -36,10 +36,38 @@
                                     <option value="etc">기타</option>
                                 </select>
                             </div>
-                    
                         </div>
+
+                        <div class="col-12">
+                            <input type="text" class="form-control mb-30" name="title" placeholder="제목 입력" required style="color:black;" value = "{{ title }}">
+                        </div>
+                        <div class="col-12">
+                            <textarea class="form-control mb-30" name="content" placeholder="내용 입력" style="color:black;"></textarea>
+                        </div>
+                        <div class="col-12">
+                            <label for="input-mediafile" class="btn btn-outline" style="border: 1px solid #80808042;">파일 선택</label>
+                            <input type="file" id="input-mediafile" style="display: none;" name="mediafile" onchange="limitSize(this)" accept="image/*, video/*" required>
+                        </div>
+                        <div class="col-12">
+                            <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
+                        </div>
+                    </form>
+                    {% else %}
+                        <form action="{% url 'posts:create' %}" method="POST"  enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <div class="container">
+                                <div >
+                                    <label>카테고리</label>
+                                    <select name="category" id="category">
+                                        <option value="pub">주점</option>
+                                        <option value="booth">부스</option>
+                                        <option value="performance">공연</option>
+                                        <option value="etc">기타</option>
+                                    </select>
+                                </div>
+                            </div>
                             <div class="col-12">
-                                <input type="text" class="form-control mb-30" name="title" placeholder="제목 입력" required style="color:black;">
+                                <input type="text" class="form-control mb-30" name="title" placeholder="제목 입력" required style="color:black;" >
                             </div>
                             <div class="col-12">
                                 <textarea class="form-control mb-30" name="content" placeholder="내용 입력" style="color:black;"></textarea>
@@ -51,8 +79,8 @@
                             <div class="col-12">
                                 <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    {% endif %}
                 </div>
 
             </div>
