hover button index, gallery 분리

--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-
+<!-- hover 버튼 위치-->
+<link rel="stylesheet" href="{% static 'css/style4.css' %}">
 <!-- Breadcrumb Area Start -->
 <section class="breadcrumb-area bg-img bg-overlay jarallax">
     <div class="container h-100">
