--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block content %}
 
+<link rel="stylesheet" href="{% static 'css/style5.css' %}">
+
 <!-- Blog Details Area Start -->
 <div class="alime--blog-area section-padding-80">
     <div class="container">
