개인정보처리방침 수정

--- a/dgufest/templates/personal_data.html
+++ b/dgufest/templates/personal_data.html
@@ -19,13 +19,13 @@
 <br>
 1. <동국대학교 융합교육원><br>
 개인정보를 제공받는 자 : 동국대학교 융합교육원<br>
-제공받는 자의 개인정보 이용목적 : 이메일, 휴대전화번호, 로그인ID, 성별, 생년월일, 이름, 학번<br>
+제공받는 자의 개인정보 이용목적 : 이메일, 휴대전화번호, 로그인ID, 이름, 학번<br>
 제공받는 자의 보유.이용기간: 1년<br>
 ※수상자로 선발될 시 통장사본, 신분증사본, 융합교육원 청구 양식에 서명 등 관련 서류를 제출해야 상금 수령이 가능합니다.<br>
 <br>
 2. <동국대학교 제52대 총학생회 하이라이트><br>
 개인정보를 제공받는 자 : 동국대학교 제52대 총학생회 하이라이트<br>
-제공받는 자의 개인정보 이용목적 : 이메일, 휴대전화번호, 로그인ID, 성별, 생년월일, 이름, 학번<br>
+제공받는 자의 개인정보 이용목적 : 이메일, 휴대전화번호, 로그인ID, 이름, 학번<br>
 제공받는 자의 보유.이용기간: 1년<br>
 ※수상자로 선발될 시 학생증 인증 등 신입생임을 입증할 수 있는 관련 서류를 제출해야 상품 수령이 가능합니다.<br>
 <br>
@@ -48,7 +48,7 @@
 ① <동국대학교 멋쟁이사자처럼>('http://dgufest.com'이하 '동대멋사')은(는) 다음의 개인정보 항목을 처리하고 있습니다.<br>
 <br>
 1<홈페이지 회원가입 관리, 동국대학교 재학생 식별 및 본인인증><br>
-필수항목 : 이메일, 휴대전화번호, 비밀번호, 로그인ID, 성별, 생년월일, 이름, 학번<br>
+필수항목 : 이메일, 휴대전화번호, 비밀번호, 로그인ID, 이름, 학번<br>
 <br>
 <br>
 6. 개인정보의 파기<동국대학교 멋쟁이사자처럼>('동대멋사')은(는) 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.<br>
