투표안내 내용 수정

--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -104,7 +104,7 @@
                             수상작은 좋아요 수에 따라 결정되며, 수상자로 선정된 재학생분들에게는 상금 지급과 함께 메인에 작품이 전시될 수 있는 기회를 드립니다.
                         </p>
                         <p>
-                            신입생분들은 축제 사진과 영상을 업로드할 수 없다는 점을 고려하여 투표를 행사한 30명을 추첨하여 소정의 기프티콘을 드릴 예정입니다.
+                            신입생분들은 축제 사진과 영상을 업로드할 수 없다는 점을 고려하여 투표를 행사한 30명을 추첨하여 소정의 상품을 드릴 예정입니다.
                         </p>
                     </div>
                 </div>
