Remove trailing spaces

--- a/dgufest/static/css/style.css
+++ b/dgufest/static/css/style.css
@@ -1707,8 +1707,8 @@ input:required {
 /*allauth-css*/
   #allauth {
     text-align: center;
-    padding-top: 50px; 
-    padding-bottom: 100px 
+    padding-top: 50px;
+    padding-bottom: 100px;
   }
 
 #new{
