--- a/dgufest/templates/account/signup.html
+++ b/dgufest/templates/account/signup.html
@@ -44,7 +44,7 @@
     <p>{% blocktrans %}이미 계정이 있으신가요? 바로
     <a href="{{ login_url }}" style="color:#fc6060; font-weight: bolder;">로그인</a>하세요.{% endblocktrans %}</p>
 
-    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}" onsubmit="return verifyValues()">
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
@@ -61,7 +61,7 @@
     </a>
 </div>
 
-<script src="{% static 'js/email-verification.js' %}"></script>
+<script src="{% static 'js/signup-validation.js' %}"></script>
 
 {% endblock %}
 
