회원가입 에러메세지 색상변경(#105)

--- a/dgufest/templates/account/signup.html
+++ b/dgufest/templates/account/signup.html
@@ -18,6 +18,11 @@
   input[type=number] {
     -moz-appearance: textfield;
   }
+
+  #allauth ul.errorlist li {
+    color: #ff0e0e;
+    font-weight: bold;
+  }
 </style>
 
 <!-- Breadcrumb Area Start -->
