--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -78,14 +78,17 @@
                         <table class="type04">
                             <tr>
                                 <th scope="row"><p>투표 기간</p></th>
-                                <td><p>11월 1일 자정까지</p></td>
+                                <td><p>11월 1일 24시까지</p></td>
                             </tr>
                             <tr>
                                 <th scope="row"><p>수상작 발표</p></th>
                                 <td><p>11월 2일 (예정)</p></td>
                             </tr>
                         </table>
-                        <br><br><br><br><br><br><br><br>
+                        <p>* 본 사이트는 12월 31일까지 운영됩니다.</p>
+                        <br>
+                        <p>* 투표 기간 이후에도 자유롭게 사진 및 영상 업로드가 가능합니다. 여러분의 추억을 사이트에 마음껏 공유해주세요!</p>
+                        <br><br><br>
                     </div>
                 </div>
 
