--- a/dgufest/templates/shared/navbar.html
+++ b/dgufest/templates/shared/navbar.html
@@ -35,7 +35,7 @@
         {% if user.is_authenticated %}
             <li><a href="{% url 'users:mypage' %}">My page</a>
                 <ul class="dropdown">
-                    <li><a href="{% url 'users:mypage' %}">- My page</a></li>
+                    <li><a href="{% url 'users:mypage' %}">- 내 프로필</a></li>
                     <li><a href="{% url 'users:like_list' %}">- 좋아요 누른 글</a></li>
                     <li><a href="{% url 'users:postlist'%}">- 내가 쓴 글</a></li>
                 </ul>
