--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -22,8 +22,73 @@
                 <!-- Leave A Reply -->
                 <div class="alime-contact-form mt-20">
                     <h4 class="mb-30">사진/영상 업로드</h4>
-
+                {% if title %}
                     <!-- Form -->
+                    <form action="{% url 'posts:update' post.id %}" method="POST"  enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="container">
+                            <div class="form-group">
+                                <label>카테고리</label>
+                                <select name="category" id="category" class="form-control col-md-2 mb-2" style="color:black">
+                                    {% if post.category == 'pub' %}
+                                        <option value="pub" selected>주점</option>
+                                        <option value="booth" >부스</option>
+                                        <option value="performance" >공연</option>
+                                        <option value="etc" >기타</option>
+                                    
+                                    {% elif post.category == 'booth' %}   
+                                        <option value="pub" >주점</option>
+                                        <option value="booth" selected>부스</option>
+                                        <option value="performance" >공연</option>
+                                        <option value="etc" >기타</option>
+
+                                    {% elif post.category == 'performance' %}   
+                                        <option value="pub" >주점</option>
+                                        <option value="booth" >부스</option>
+                                        <option value="performance"selected >공연</option>
+                                        <option value="etc" >기타</option>
+
+                                    {% elif post.category == 'etc' %}   
+                                        <option value="pub" >주점</option>
+                                        <option value="booth" >부스</option>
+                                        <option value="performance" >공연</option>
+                                        <option value="etc" selected>기타</option>
+                                    {% endif %}
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <label>제목</label>
+                            <p style="color:#fc6060;">{{ title }}</p>
+                            <input type="text" class="form-control mb-30" name="title" value = "{{ post.title }}", placeholder="제목 입력" required style="color:black;">
+                        </div>
+                        <div class="col-12">
+                            <label>내용</label>
+                            <textarea class="form-control mb-30" name="content" placeholder="내용 입력" style="color:black;">{{ post.content }} </textarea>
+                        </div>
+                        <div class="col-12">
+                            <label for="uploadFile" class="upload-file" >
+                                <div class="btn btn-outline">파일 선택<input type="file" name="mediafile" onchange="fileCheck(this)" accept="post.mediafile"></div>
+                                <p id="onlyFileName">{{ post.mediafile }}</p><!-- 업로드파일명 -->
+                            </label>
+                        </div>
+                        <div class="col-12">  
+                            <div id="content">
+                                {% if "video" in post.mediatype %}
+                                    <video class="col-12" controls preload="auto" style="width: 50%" id="show-video-tag">
+                                        <source src="{{post.mediafile.url}}" alt="video">
+                                    </video>
+                                {% elif "image" in post.mediatype %}
+                                    <img src="{{post.mediafile.url}}" style="width: 50%" alt="" id="show-image-tag">
+                                {% endif %} 
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
+                        </div>
+                    </form>
+                    {% else %}
                     <form action="{% url 'posts:update' post.id %}" method="POST"  enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="container">
@@ -87,6 +152,7 @@
                             <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
                         </div>
                     </form>
+                    {% endif %}
                 </div>
             </div>
         </div>
