post input title 태그에 maxlength추가 및 15글자 이상 입력시 alert발생

--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -145,6 +145,8 @@
 
     <script src="{% static 'js/filename.js' %}"></script>
     
+    <script src="{% static 'js/chk_title.js' %}"></script>
+    
 
 
 </body>
